<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/action_add"
        app:showAsAction="never" >
        <menu>
                <item android:id="@+id/action_add_story"
                    android:title="@string/action_add_story"/>
                <item android:id="@+id/action_add_card"
                    android:title="@string/action_add_card"/>
                <item android:id="@+id/action_add_module"
                    android:title="@string/action_add_module"/>
        </menu>
    </item>

    <item
        android:title="@string/action_search"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/action_search_story"
                android:title="@string/action_search_story"/>
            <item android:id="@+id/action_search_card"
                android:title="@string/action_search_card"/>
            <item android:id="@+id/action_search_module"
                android:title="@string/action_search_module"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>