<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tb_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            app:titleTextColor="@color/white"
            app:theme="@style/OverflowMenuTheme"
            android:layout_above="@color/blue" />
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbars="vertical"
        android:fadingEdge="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/green"
                android:text="版本信息"/>
            <TextView
                android:layout_margin="@dimen/dp_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/introduce0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:textColor="@color/green"
                android:text="应用简介"/>
            <TextView
                android:layout_margin="@dimen/dp_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/introduce2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:textColor="@color/green"
                android:text="使用说明"/>
            <TextView
                android:layout_margin="@dimen/dp_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/introduce3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:textColor="@color/green"
                android:text="关于应用"/>
            <TextView
                android:layout_margin="@dimen/dp_8"
                android:autoLink="web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/introduce1"/>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_introduce_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:src="@drawable/ic_fab_ok"
        android:layout_gravity="center|bottom"
        app:borderWidth="0dp"
        app:backgroundTint="@color/blue" />
</android.support.design.widget.CoordinatorLayout>

